More beautiful features

--- a/mservices/index.html
+++ b/mservices/index.html
@@ -126,7 +126,7 @@
                         <img src="assets/img/68.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="renewable-text" data-aos="fade-left" data-aos-delay="100">
-                        <h1 class="display-1">Renewable Energy</h1>
+                        <h1 class="display-1">Solar Systems</h1>
                         <p>
                             We do supply, install, testing and commissioning of renewable energy system
                             (solar energy).
