--- a/mservices/pages/about.html
+++ b/mservices/pages/about.html
@@ -176,7 +176,7 @@
         <!-- Core Values-->
         <section id="core-values" class="bg-white">
             <div class="container">
-                <h1 class="display-4">Our Core Values</h1>
+                <h1 class="display-4">Core Values</h1>
                 <div class="row flex even-columns pt-3">
                     <div class="side-cards">
                         <div class="card">
