--- a/mservices/pages/contact.html
+++ b/mservices/pages/contact.html
@@ -81,43 +81,90 @@
             </div>
         </section>
 
+        <!-- Contact Form-->
+        <section id="contact-form" class="bg-white">
+            <div class="container">
+                <h1 class="display-4">Get In Touch</h1>
+                <p class="contact-para">Please fill in the form below to contact us</p>
+                <div class="row flex even-columns">
+                    <div class="form">
+                        <form action="#" method="post">
+                            <div class="field name">
+                                <div class="input-group">
+                                    <input type="text" name="fname" id="fname" placeholder="First Name" required>
+                                </div>
+                                <div class="input-group">
+                                    <input type="text" name="lname" id="lname" placeholder="Last Name" required>
+                                </div>
+                            </div>
+                            <div class="multi-cross-fields">
+                                <div class="field email">
+                                    <div class="input-group">
+                                        <input type="email" name="email" id="email" placeholder="Email" required>
+                                    </div>
+                                </div>
+                                <div class="field subject">
+                                    <div class="input-group">
+                                        <input type="text" name="subject" id="subject" placeholder="Subject" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="field message">
+                                <div class="input-group">
+                                    <textarea name="message" id="message" placeholder="Message" cols="30" rows="10"
+                                        required></textarea>
+                                </div>
+                            </div>
+                            <div class="input-group">
+                                <input type="submit" value="Send Message" class="btn btn-send">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="form-img">
+                        <img src="../assets/img/33.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            </div>
+            </div>
+        </section>
+
         <!-- Contact Cards-->
         <section id="contact-cards" class="bg-light">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="contact-statements">
-                        <div class="side-cards">
-                            <div class="card">
-                                <h4><i class="fas fa-map-marker-alt"></i> Location</h4>
-                                <p>
-                                    Goba Njia Nne, Madale Road
-                                    <br>
-                                    P.O. Box 71480, Dar es Salaam, Tanzania
-                                </p>
-                            </div>
-                            <div class="card">
-                                <h4><i class="fas fa-globe"></i> Website</h4>
-                                <p>
-                                    www.mservices.co.tz
-                                </p>
-                            </div>
-                            <div class="card">
-                                <h4><i class="fas fa-phone-alt"></i> Phone</h4>
-                                <p>
-                                    +255 785 398 434
-                                    <br>
-                                    +255 713 500 365
-                                </p>
-                            </div>
-                            <div class="card">
-                                <h4><i class="fas fa-envelope"></i> Email</h4>
-                                <p>
-                                    info@mservices.co.tz
-                                </p>
-                            </div>
+                    <div class="inner-cards">
+                        <div class="card">
+                            <h4><i class="fas fa-map-marker-alt"></i> Location</h4>
+                            <p>
+                                Goba Njia Nne, Madale Road
+                                <br>
+                                P.O. Box 71480, Dar es Salaam, Tanzania
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4><i class="fas fa-globe"></i> Website</h4>
+                            <p>
+                                www.mservices.co.tz
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4><i class="fas fa-phone-alt"></i> Phone</h4>
+                            <p>
+                                +255 785 398 434
+                                <br>
+                                +255 713 500 365
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4><i class="fas fa-envelope"></i> Email</h4>
+                            <p>
+                                info@mservices.co.tz
+                            </p>
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
 
