--- a/mservices/pages/projects.html
+++ b/mservices/pages/projects.html
@@ -86,18 +86,18 @@
             <div class="container">
                 <h1 class="display-4">Projects</h1>
                 <div class="projects-links">
-                    <a href="#all" class="active">All</a>
-                    <a href="#all">Commercial</a>
-                    <a href="#all">Residential</a>
-                    <a href="#all">Industrial</a>
-                    <p></p>
+                    <span class="active" id="all">All</span>
+                    <span id="commercial">Commercial</span>
+                    <span id="residential">Residential</span>
+                    <span id="industrial">Industrial</span>
                 </div>
-                <div class="row flex even-columns pt-3">
+                <!-- All Row -->
+                <div class="row flex even-columns pt-3" id="all-row">
                     <div class="side-cards">
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-inner">
-                                    <img src="../assets/img/0.jpg" alt="" class="card-img-top img-fluid">
+                                    <img src="../assets/img/53.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
                             <div class="card-body">
@@ -110,7 +110,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-inner">
-                                    <img src="../assets/img/1.jpg" alt="" class="card-img-top img-fluid">
+                                    <img src="../assets/img/29.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
                             <div class="card-body">
@@ -123,7 +123,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-inner">
-                                    <img src="../assets/img/2.jpg" alt="" class="card-img-top img-fluid">
+                                    <img src="../assets/img/54.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
                             <div class="card-body">
@@ -136,7 +136,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-inner">
-                                    <img src="../assets/img/3.jpg" alt="" class="card-img-top img-fluid">
+                                    <img src="../assets/img/71.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
                             <div class="card-body">
@@ -149,7 +149,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-inner">
-                                    <img src="../assets/img/4.jpg" alt="" class="card-img-top img-fluid">
+                                    <img src="../assets/img/82.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
                             <div class="card-body">
@@ -162,7 +162,295 @@
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-inner">
-                                    <img src="../assets/img/5.jpg" alt="" class="card-img-top img-fluid">
+                                    <img src="../assets/img/72.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renovation restoration</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/79.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Civil works</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/51.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Lighting</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/71.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renovation restoration</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Commercial Row-->
+                <div class="row flex even-columns pt-3" id="commercial-row">
+                    <div class="side-cards">
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/44.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Electrical installation</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/45.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Substation construction</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/46.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renewable energy</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/47.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Civil works</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/48.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Lighting</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/49.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renovation restoration</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Residential Row -->
+                <div class="row flex even-columns pt-3" id="residential-row">
+                    <div class="side-cards">
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/71.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Electrical installation</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/73.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Substation construction</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/75.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renewable energy</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/47.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Civil works</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/51.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Lighting</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/52.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renovation restoration</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Industrial Row -->
+                <div class="row flex even-columns pt-3" id="industrial-row">
+                    <div class="side-cards">
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/82.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Electrical installation</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/31.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Substation construction</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/79.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renewable energy</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/33.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Civil works</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/83.jpg" alt="" class="card-img-top img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Lighting</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/34.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
                             <div class="card-body">
