--- a/mservices/pages/services.html
+++ b/mservices/pages/services.html
@@ -90,85 +90,196 @@
                         <div class="side-cards">
                             <div class="card">
                                 <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/0.jpg" alt="" class="card-img-top img-fluid">
+                                    <div class="inner">
+                                        <img src="../assets/img/71.jpg" alt="" class="card-img-top img-fluid">
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <h4>Electrical installation</h4>
+                                    <h4>Residential Electrician</h4>
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
+                                        Supply, installation, test and commissioning of electrical systems for residential
+                                        buildings.
                                     </p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/1.jpg" alt="" class="card-img-top img-fluid">
+                                    <div class="inner">
+                                        <img src="../assets/img/82.jpg" alt="" class="card-img-top img-fluid">
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <h4>Substation construction</h4>
+                                    <h4>Industrial Electrician</h4>
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
+                                        Supply, installation, test and commissioning of electrical systems for
+                                        industrial buildings.
                                     </p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/2.jpg" alt="" class="card-img-top img-fluid">
+                                    <div class="inner">
+                                        <img src="../assets/img/48.jpg" alt="" class="card-img-top img-fluid">
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <h4>Renewable energy</h4>
+                                    <h4>Commercial Electrician</h4>
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
+                                        Supply, installation, test and commissioning of electrical systems for commercial
+                                        buildings.
                                     </p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/3.jpg" alt="" class="card-img-top img-fluid">
+                                    <div class="inner">
+                                        <img src="../assets/img/29.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Substations construction</h4>
+                                    <p>
+                                        Construction of substations including installation of transformer and related
+                                        civil works.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/21.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Lightning Protection</h4>
+                                    <p>
+                                        Design and Installation of Lightning Protection Schemes.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/19.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Electrical equipments</h4>
+                                    <p>
+                                        Supply, install, test and commissioning of different electrical equipments
+                                        and switchgears such as Transformer, Panels and Generator.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/79.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Electrical Protection System</h4>
+                                    <p>
+                                        Supply, installation, test and commissioning of electrical protection system.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/31.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Power Distribution</h4>
+                                    <p>
+                                        Construction, Test and Commissioning Medium Voltage (MV) Transmission
+                                        and Low Voltage (LV) Power Distribution Lines (Overhead & Underground).
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/72.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Cabling</h4>
+                                    <p>
+                                        Supply, installation, test and commissioning of cable including cable
+                                        terminations
+                                        (up to 33,000Volts).
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/22.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Fault tracing</h4>
+                                    <p>
+                                        Fault tracing and analysis to provide temporary or permanent solution.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/9.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Energy usage analysis</h4>
+                                    <p>
+                                        Analyzing energy usage in plants and power distribution points and advising
+                                        on proper energy usage accordingly.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/25.jpg" alt="" class="card-img-top img-fluid">
                                     </div>
                                 </div>
                                 <div class="card-body">
                                     <h4>Civil works</h4>
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
+                                        We offer our expertise in renovation and partitioning works.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="side-cards-2">
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="inner">
+                                        <img src="../assets/img/74.jpg" alt="" class="card-img-top img-fluid">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h4>Solar System</h4>
+                                    <p>
+                                        Supply, installation, test and commission of renewable energy system
+                                        (solar energy).
                                     </p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/4.jpg" alt="" class="card-img-top img-fluid">
+                                    <div class="inner">
+                                        <img src="../assets/img/80.jpg" alt="" class="card-img-top img-fluid">
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <h4>Lighting</h4>
+                                    <h4>Fire detection System</h4>
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/5.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h4>Renovation restoration</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
+                                        Supply, install, test and commissioning of Fire detection and Alarm System in
+                                        residential, commercial and industrial building.
                                     </p>
                                 </div>
                             </div>
